# mcp_rust

./: .gitignore  Makefile  README.md  test_all.sh
backend/: Cargo.toml
backend/logs/: backend.log.2025-09-14
backend/src/: config.rs  db.rs  fetch.rs  intent.rs  main.rs  mcp.rs  models.rs  router.rs
backend/src/handlers/: chat.rs  cloud_mon.rs  data_integration_bi.rs  db_perf.rs  gitlab_ci.rs  incident_metrics.rs  mobile_telemetry.rs  mod.rs  observability.rs  runtime_logs.rs  security_auth.rs  settings.rs  user_feedback.rs
backend/src/util/: logging.rs  mod.rs  time.rs
data/: init_mysql.sql
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts
frontend/src/components/: ChatPanel.vue  DebugLog.vue  SettingsDrawer.vue
migrations/: 20250914_000001_create_settings.sql  20250914_000002_create_chat_logs.sql  20250914_000003_create_debug_traces.sql  20250914_000004_create_users.sql  20250914_000005_create_api_results.sql  20250915_000006_alter_settings_add_response_prompt.sql
