[package]
name = "smrt-mcp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web framework & routing
axum = { version = "0.7", features = ["macros", "http1", "http2", "json", "tower-log"] }
tower = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# --- JSON, Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Database (MySQL + SQLx)
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono", "json"] }

# --- Time & Date
chrono = { version = "0.4", features = ["serde"] }

# --- HTTP client (OpenAI)

reqwest = { version = "0.12", features = ["json","gzip","brotli","zstd","native-tls","stream"] }

# --- Utilities
anyhow = "1"
rand = "0.8"
fastrand = "2"
dotenvy = "0.15"   # <-- pindah ke sini

# --- Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "util", "request-id", "cors"] }


# --- SSE / streaming
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
tracing-appender = "0.2"

regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
